--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "filepond": "^4.30.4",
     "filepond-plugin-file-encode": "^2.1.10",
     "filepond-plugin-image-preview": "^4.6.11",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
