--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "filepond": "^4.30.4",
     "filepond-plugin-file-encode": "^2.1.10",
     "filepond-plugin-image-preview": "^4.6.11",
+    "minisearch": "^6.0.1",
     "primeicons": "^6.0.1",
     "primereact": "^9.2.0",
     "react": "^18.2.0",
@@ -23,7 +24,8 @@
     "react-markdown": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
-    "react-tag-autocomplete": "^7.0.0-rc.4"
+    "react-tag-autocomplete": "^7.0.0-rc.4",
+    "react-tagcloud": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
