--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "filepond": "^4.30.4",
     "filepond-plugin-file-encode": "^2.1.10",
     "filepond-plugin-image-preview": "^4.6.11",
+    "i18next": "^22.4.10",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.1.1",
     "minisearch": "^6.0.1",
     "primeicons": "^6.0.1",
     "primereact": "^9.2.0",
@@ -21,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-filepond": "^7.1.2",
+    "react-i18next": "^12.2.0",
     "react-markdown": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
