--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-tag-autocomplete": "^7.0.0-rc.4",
-    "react-tagcloud": "^2.3.1"
+    "react-tagcloud": "^2.3.1",
+    "react-toggle-dark-mode": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
